@@ -1,7 +1,8 @@
 File Name: CHANGES
 
-06/25/2020 FASP 2.5.3:
+06/30/2020 FASP 2.5.3:
 - Modify test problems.
+- Skip comments in the beginning of data files.
 
 05/16/2020 FASP 2.5.2:
 - Add VS19 solution.
